--- a/example/src/styles/index.scss
+++ b/example/src/styles/index.scss
@@ -1,3 +1,3 @@
-@import '../../node_modules/bootstrap/scss/bootstrap';
+@import '~bootstrap/scss/bootstrap.scss';
 @import "layout";
 @import "components";
